--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "@prisma/adapter-libsql": "6.19.1",
     "@prisma/client": "6.19.1",
     "hono": "^4.11.1",
+    "hono-rate-limiter": "^0.5.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
