--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "hono",
   "type": "module",
   "dependencies": {
+    "@hono/zod-validator": "^0.7.6",
     "@prisma/adapter-libsql": "6.19.1",
     "@prisma/client": "6.19.1",
     "hono": "^4.11.1",
